# Arduino

./: 404.html  README.md  index.html
.github/workflows/: publish-docs.yml
Humidity_Temperature_Sensor_DHT11/: humidity_temp_sensor.ino
Humidity_Temperature_Sensor_DHT11/app/: docker-compose.yml
Humidity_Temperature_Sensor_DHT11/app/monitors/: Dockerfile
Humidity_Temperature_Sensor_DHT11/app/monitors/monitors/: pyproject.toml
Humidity_Temperature_Sensor_DHT11/app/monitors/monitors/monitor/: arduino_monitor.py  main.py  serial_conn.py
Humidity_Temperature_Sensor_DHT11/app/telegraf/: telegraf.conf
Humidity_Temperature_Sensor_DHT11/arduino-docs/docs/projects/: temperature_humidity_sensor.md
about/: index.html
arduino-docs/: mkdocs.yml
arduino-docs/docs/: about.md  index.md
arduino-docs/docs/projects/: temperature_humidity_sensor.md
projects/temperature_humidity_sensor/: index.html
search/: search_index.json
